--- a/webroot/css/less/specs.less
+++ b/webroot/css/less/specs.less
@@ -1,1 +1,13 @@
 //app sepcifics
+.scaffold form legend + div {
+	clear: both;
+	padding-top:15px;
+}
+
+.scaffold form .controls .error {
+	display:none;
+}
+
+.scaffold .details table tr td:first-child {
+	width:20%;
+}
