Scaffold Form - Add: tabbed scaffold form

--- a/webroot/css/less/specs.less
+++ b/webroot/css/less/specs.less
@@ -11,3 +11,9 @@
 .scaffold .details table tr td:first-child {
 	width:20%;
 }
+
+.scaffold-form-tabs li .error {
+	background-color: @errorBackground;
+	border-color: @errorBorder;
+	color: @errorText;
+}
